--- a/assets/SCSS/main.scss
+++ b/assets/SCSS/main.scss
@@ -2,5 +2,7 @@
 @import "normalize"; 
 @import "typography";
 @import "mixing";
+@import "animations";
 @import "header"; 
 @import "devicesList";  
+@import "canvas";  
