--- a/assets/SCSS/_devicesList.scss
+++ b/assets/SCSS/_devicesList.scss
@@ -1,9 +1,13 @@
-.devices{
-    ul{
-        li{
-            background: $devicesButtonColor;
+.devices {
+    ul {
+        li {
+            //background: $devicesButtonColor;
+            background: rgb(235,235,235);
+            background: linear-gradient(130deg, rgba(235, 235, 235, 1) 50%, rgba(230, 233, 248, 1) 100%);
+            background-size: 200% 100%;
+            background-position: 0 0;
             height: $devicesButtonH;
-            border-bottom: solid $defBorderSize $defBorderColor;            
+            border-bottom: solid $defBorderSize $defBorderColor;
             font-family: $generalFont;
             font-size: 14px;
             font-weight: 500;
@@ -11,35 +15,67 @@
             line-height: $devicesButtonH;
             display: grid;
             grid-template-columns: $devicesButtonH auto 100px;
-            cursor: pointer;            
-            &::before{
+            cursor: pointer;
+            &::before {
                 content: "";
                 margin: 5px 0;
             }
-            &[data-stat="0"]{                
-                &::before{
+            &:hover {
+                background: rgb(235,235,235);
+                background: linear-gradient(130deg, rgba(235, 235, 235, 1) 50%, rgba(230, 233, 248, 1) 100%);
+                background-size: 100% 100%;
+                background-position: 0 0;
+            }
+            &[data-active="0"] {
+                display: none;
+            }
+            &[data-stat="0"] {
+                &::before {
                     @include icon-stat-off;
+                    transition: 0.5s;
                 }
-                .switch{ 
-                    background-color: $switchButtonOffBg;
+                .switch {
+                    // background-color: $switchButtonOffBg;
                     color: $switchButtonOffFontColor;
+
+                    background: rgb(255, 255, 255);
+                    background: linear-gradient(
+                        90deg,
+                        rgba(255, 255, 255, 1) 0%,
+                        rgba(255, 255, 255, 1) 50%,
+                        rgba(0, 0, 0, 1) 50%,
+                        rgba(0, 0, 0, 1) 100%
+                    );
+                    background-size: 200% 100%;
+                    background-position: -100% 0;
                 }
             }
-            &[data-stat="1"]{                
-                &::before{
+            &[data-stat="1"] {
+                &::before {
                     @include icon-stat-on;
+                    transition: 0.5s;
                 }
-                .switch{ 
-                    background-color: $switchButtonOnBg;
+                .switch {
+                    //background-color: $switchButtonOnBg;
                     color: $switchButtonOnFontColor;
+                    background: rgb(255, 255, 255);
+                    background: linear-gradient(
+                        90deg,
+                        rgba(255, 255, 255, 1) 0%,
+                        rgba(255, 255, 255, 1) 50%,
+                        rgba(0, 0, 0, 1) 50%,
+                        rgba(0, 0, 0, 1) 100%
+                    );
+                    background-size: 200% 100%;
+                    background-position: 0 0;
                 }
             }
-            .switch{                
+            .switch {
                 height: 20px;
                 margin: 15px 20px;
                 line-height: 20px;
                 text-align: center;
-                text-transform: uppercase; 
+                text-transform: uppercase;
                 font-size: 12px;
             }
         }
