--- a/assets/SCSS/_header.scss
+++ b/assets/SCSS/_header.scss
@@ -1,25 +1,50 @@
-.header{   
-    background-color: $headerColor;
-    height: $headerH;    
-    line-height: $headerH; 
-    display: grid;
-    grid-template-columns: 50px auto 50px;
-    font-family: $generalFont;
-    color: $headerFontColor;
-    font-size: 14px;
-    font-weight: 500;
-    nav{
-        grid-column-end: span 1;
-        grid-row-end: span 1;        
-        @include icon-nav;
-    }
-    h3{
+.header {
+    &--home {
+        background-color: $headerColor;
+        height: $headerH;
+        line-height: $headerH;
+        display: grid;
+        grid-template-columns: 50px auto 50px;
+        font-family: $generalFont;
+        color: $headerFontColor;
+        font-size: 14px;
         font-weight: 500;
+        nav {
+            grid-column-end: span 1;
+            grid-row-end: span 1;
+            @include icon-nav;
+        }
+        h3 {
+            font-weight: 500;
+        }
+        .search {
+            grid-column-end: span 1;
+            grid-row-end: span 1;
+            @include icon-search;
+            margin-right: 10px;
+        }
     }
-    .search{
-        grid-column-end: span 1;
-        grid-row-end: span 1;       
-        @include icon-search;
-        margin-right: 10px;
+    &--item {
+        background-color: $headerColor;
+        height: $headerH;
+        line-height: $headerH;
+        display: grid;
+        grid-template-columns: 50px auto 50px;
+        font-family: $generalFont;
+        color: $headerFontColor;
+        font-size: 14px;
+        font-weight: 500;
+        nav {
+            grid-column-end: span 1;
+            grid-row-end: span 1;
+            @include icon-back ;
+            cursor: pointer;
+        }
+        h3 {
+            font-weight: 500;
+        }
+        .search {
+            display: none;
+        }
     }
 }
